--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <div class="mascara"></div>
+
     <main id="home">
         <nav>
             <div class="cabeçalho">
@@ -46,10 +48,29 @@
         </section>
 
         <section class="container3">
-            <div class="textos">
 
+            <div class="textos">
+                <h1>Por Que Escolher A Beto Estofados?</h1>
+                <p>A <strong>Beto Estofados</strong> nasceu com o propósito de transformar ideias em soluções criativas e funcionais.
+                    Desde o início, buscamos unir qualidade, inovação e dedicação em cada projeto, sempre colocando
+                    nossos clientes no centro de tudo o que fazemos.<br>
+
+                    Com uma equipe apaixonada e comprometida, oferecemos serviços que vão além da entrega: buscamos
+                    construir relacionamentos de confiança, baseados em transparência e resultados reais.<br>
+
+                    Nosso objetivo é simples: ajudar pessoas e empresas a alcançarem seus sonhos, oferecendo produtos e
+                    serviços que fazem a diferença no dia a dia.<br>
+
+                    Na <strong>Beto Estofados</strong>, acreditamos que cada detalhe importa, e é por isso que trabalhamos com carinho
+                    e profissionalismo em cada etapa, do planejamento à execução.<br>Na <strong>Beto Estofados</strong>, nos destacamos pela
+                    qualidade e dedicação em cada projeto. Nossa equipe é
+                    altamente
+                    capacitada e apaixonada pelo que faz, garantindo resultados excepcionais e a satisfação de
+                    nossos
+                    clientes.</p>
 
             </div>
+
 
         </section>
 
@@ -101,7 +122,7 @@
             </div>
 
             <section class="container6-videos">
-                
+
                 <h1>Veja Alguns de Nossos Trabalhos</h1>
 
                 <div class="content-video">
@@ -109,21 +130,21 @@
 
                     <div class="video1">
 
-                        <video autoplay muted loop>
+                        <video id="video1" autoplay muted loop>
                             <source src="./assets/video/video1.mp4" type="video/mp4">
                             Seu navegador não suporta o elemento de vídeo.
                         </video>
                     </div>
                     <div class="video1">
 
-                        <video autoplay muted loop>
+                        <video id="video2" autoplay muted loop>
                             <source src="./assets/video/video2.mp4" type="video/mp4">
                             Seu navegador não suporta o elemento de vídeo.
                         </video>
                     </div>
                     <div class="video1">
 
-                        <video autoplay muted loop>
+                        <video id="video3" autoplay muted loop>
                             <source src="./assets/video/video3.mp4" type="video/mp4">
                             Seu navegador não suporta o elemento de vídeo.
                         </video>
@@ -133,8 +154,37 @@
                 </div>
 
 
+            </section class=container7>
 
-            </section>
+            <div class="galeria">
+                <h1>Galeria de Fotos</h1>
+                
+
+                <div class="fotos-galeria">
+
+                    <div class="foto1">
+                        <img src="./assets/img/1.jpg">
+                    </div>
+                    <div class="foto1">
+                        <img src="./assets/img/2.jpg">
+                    </div>
+                    <div class="foto1">
+                        <img src="./assets/img/3.jpg">
+                    </div>
+                    <div class="foto1">
+                        <img src="./assets/img/4.jpg">
+                    </div>
+                    <div class="foto1">
+                        <img src="./assets/img/5.jpg">
+                    </div>
+                    <div class="foto1">
+                        <img src="./assets/img/6.jpg">
+                    </div>
+
+                </div>
+            </div>
+
+
 
     </main>
 </body>
