--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <section class="container6-videos">
 
                 <h1>Veja Alguns de Nossos Trabalhos</h1>
+                <p>clique no vídeo pra ver mais detalhes</p>
 
                 <div class="content-video">
 
