--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
             <div class="textos">
                 <h1>Por Que Escolher A Beto Estofados?</h1>
-                <p>A <strong>Beto Estofados</strong> nasceu com o propósito de transformar ideias em soluções criativas e funcionais.
+                <p>A <strong>Beto Estofados</strong> nasceu com o propósito de transformar ideias em soluções criativas
+                    e funcionais.
                     Desde o início, buscamos unir qualidade, inovação e dedicação em cada projeto, sempre colocando
                     nossos clientes no centro de tudo o que fazemos.<br>
 
@@ -61,8 +62,10 @@
                     Nosso objetivo é simples: ajudar pessoas e empresas a alcançarem seus sonhos, oferecendo produtos e
                     serviços que fazem a diferença no dia a dia.<br>
 
-                    Na <strong>Beto Estofados</strong>, acreditamos que cada detalhe importa, e é por isso que trabalhamos com carinho
-                    e profissionalismo em cada etapa, do planejamento à execução.<br>Na <strong>Beto Estofados</strong>, nos destacamos pela
+                    Na <strong>Beto Estofados</strong>, acreditamos que cada detalhe importa, e é por isso que
+                    trabalhamos com carinho
+                    e profissionalismo em cada etapa, do planejamento à execução.<br>Na <strong>Beto Estofados</strong>,
+                    nos destacamos pela
                     qualidade e dedicação em cada projeto. Nossa equipe é
                     altamente
                     capacitada e apaixonada pelo que faz, garantindo resultados excepcionais e a satisfação de
@@ -159,7 +162,7 @@
 
             <div class="galeria">
                 <h1>Galeria de Fotos</h1>
-                
+
 
                 <div class="fotos-galeria">
 
@@ -185,7 +188,43 @@
                 </div>
             </div>
 
+            <section class="container8">
 
+                <div class="preços-iniciais">
+
+                    <div class="preços-iniciais-textos">
+                        <h1>Preços iniciais</h1>
+                        <p>Acesse nossos guias de preços gratuitos para ter uma ideia aproximada de quanto seu projeto
+                            pode custar.
+                            Nossa empresa de reformas residenciais fornece orçamentos precisos e contínuos durante todo
+                            o processo
+                            de design, além de um preço fixo antes do início da construção.</p>
+                        <button>>> Solicitar Orçamento</button>
+                    </div>
+
+                    <div class="preços-iniciais-imagem">
+                        <img src="./assets/img/lisa-amann-lDAkoo6TpWE-unsplash.jpg">
+
+                    </div>
+
+                </div>
+
+            </section>
+
+            <footer>
+                <div class="footer-content">
+                    <h3>Beto Estofados Mcz</h3>
+                    <p>Transformando estofados há mais de 20 anos, somos líder de reformas e construção de sonhoa
+                        por toda Maceió, Profissionalismo e atenção quase obsessiva aos detalhes. Deixe-nos transformar sua
+                        casa
+                        em um lindo espoço confortável e aconchegante.</p>
+                    <ul class="socials">
+                        <li><a href="#"><img src="./assets/img/whatsapp.png" alt="WhatsApp"></a></li>
+                        <li><a href="#"><img src="./assets/img/instagram.png" alt="Instagram"></a></li>
+                        <li><a href="#"><img src="./assets/img/facebook.png" alt="Facebook"></a></li>
+                    </ul>
+                </div>
+            </footer>
 
     </main>
 </body>
