--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-about">
-          <img src="./assets/img/logo.png" alt="Logo Beto Estofados" />
+          <img src="./assets/img/logo.PNG" alt="Logo Beto Estofados" />
           <p>
             Transformando estofados há mais de 20 anos, a <strong>Beto Estofados</strong> é líder em reformas e na
             construção de sonhos em Maceió. Nosso diferencial está no profissionalismo e na atenção aos detalhes.
