--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <a
               href="https://api.whatsapp.com/send?phone=5582996652730&text=Ol%C3%A1%2C%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20com%20voc%C3%AAs."><img
                 src="./assets/img/whatsapp.png" alt="Whatsapp" /></a>
-            <a href="https://www.instagram.com/betoestofadosmcz/"><img src="./assets/img/Instagram.PNG"
+            <a href="https://www.instagram.com/betoestofadosmcz/"><img src="assets/img/Instagram.png"
                 alt="Instagram" /></a>
           </div>
         </div>
