--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <div id="main-nav" class="cabeçalho">
         <a href="#sobre">Sobre</a>
         <a href="#serviços">Serviços</a>
+        <a href="#galeria">Galeria</a>
+        <a href="#videos">Videos</a>
         <a href="#contato">Contato</a>
       </div>
     </nav>
@@ -44,7 +46,7 @@
       </div>
     </section>
 
-    <section class="container3 fade-up">
+    <section id="sobre" class="container3 fade-up">
       <div class="textos">
         <h1>Por Que Escolher A Beto Estofados?</h1>
         <p>
@@ -74,7 +76,7 @@
       </div>
     </section>
 
-    <section class="container5 fade-up">
+    <section id="serviços" class="container5 fade-up">
       <h1>Como Podemos Ajudar?</h1>
 
       <div class="imagens-serviços">
@@ -101,27 +103,26 @@
       </div>
     </section>
 
-    <section id="serviços" class="container6-videos fade-up">
-      <h1>Veja Alguns de Nossos Trabalhos</h1>
-      <p>clique no vídeo pra ver em tela cheia</p>
+    <section id="videos" id="serviços" class="container6-videos fade-up">
+      <h1>Alguns de Nossos Trabalhos</h1>
 
       <div class="content-video">
         <div class="video1 video-item">
-          <video id="video1" muted loop playsinline preload="metadata">
+          <video id="video1" autoplay muted loop playsinline preload="metadata">
             <source src="./assets/video/video1.mp4" type="video/mp4" />
             Seu navegador não suporta o elemento de vídeo.
           </video>
         </div>
 
         <div class="video1 video-item">
-          <video id="video2" muted loop playsinline preload="metadata">
+          <video id="video2" autoplay muted loop playsinline preload="metadata">
             <source src="./assets/video/video2.mp4" type="video/mp4" />
             Seu navegador não suporta o elemento de vídeo.
           </video>
         </div>
 
         <div class="video1 video-item">
-          <video id="video3" muted loop playsinline preload="metadata">
+          <video id="video3" autoplay muted loop playsinline preload="metadata">
             <source src="./assets/video/video3.mp4" type="video/mp4" />
             Seu navegador não suporta o elemento de vídeo.
           </video>
@@ -129,7 +130,7 @@
       </div>
     </section>
 
-    <div class="galeria fade-up">
+    <div id="galeria" class="galeria fade-up">
       <h1>Galeria de Fotos</h1>
 
       <div class="fotos-galeria">
@@ -145,8 +146,8 @@
     <section class="container8 fade-up">
       <div class="preços-iniciais">
         <div class="preços-iniciais-textos">
-          <h1>Preços iniciais</h1>
-          <p>Acesse nossos guias de preços gratuitos para ter uma ideia aproximada de quanto seu projeto pode custar.
+          <h1>Entre em contato</h1>
+          <p>Clique no botão abaixo para ter uma ideia aproximada de quanto seu projeto pode custar.
             Nossa empresa de reformas residenciais fornece orçamentos precisos e contínuos durante todo o processo.</p>
           <button onclick="solicitarOrcamento()" class="button-orçamento">Solicite um Orçamento</button>
         </div>
@@ -166,10 +167,10 @@
           </p>
         </div>
 
-        <div class="footer-contact">
+        <div id="contato" class="footer-contact">
           <h3>Contato</h3>
           <p><strong>📍 Endereço:</strong> Rua Oscalina Maria Silva, 85 Vergel do Lago - Maceió/AL</p>
-          <p><strong>📞 Whatsapp:</strong> (82) 99665-2730</p>
+          <p><strong>📞 Whatsapp:</strong> (82) 99981-8788</p>
           <p><strong>✉️ Email:</strong> contato@betoestofados.com</p>
         </div>
 
@@ -177,7 +178,7 @@
           <h3>Fale conosco</h3>
           <div class="social-icons">
             <a
-              href="https://api.whatsapp.com/send?phone=5582996652730&text=Ol%C3%A1%2C%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20com%20voc%C3%AAs."><img
+              href="https://api.whatsapp.com/send?phone=5582999818788&text=Ol%C3%A1%2C%20gostaria%20de%20fazer%20um%20or%C3%A7amento%20com%20voc%C3%AAs."><img
                 src="./assets/img/whatsapp.png" alt="Whatsapp" /></a>
             <a href="https://www.instagram.com/betoestofadosmcz/"><img src="assets/img/Instagram.png"
                 alt="Instagram" /></a>
